# sunshine_mcp

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
src/: __init__.py
src/client/: __init__.py
src/server/: mcp_server.py
src/tools/: __init__.py  cli.py  sunshine_finder.py
