[project]
name = "sunshine-mcp"
version = "0.1.0"
description = "Find locations with good weather/sunshine within a reasonable distance"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx",
    "click",
    "fastmcp",
]

[project.scripts]
sunshine-cli = "src.tools.cli:main"
sunshine-server = "src.server.mcp_server:main"

[project.entry-points."fastmcp.servers"]
sunshine = "src.server.mcp_server:mcp"
